pxc/tests/test_031_thrattr/up1.px
public namespace up1;
import core::common -;

pure mtvaluetype struct bar {
  int z;
}

pure function {f} int fts(int x)
{
  int r = f(3 + x);
  return r;
}

pure multithreaded struct foo(bar const& bx) {
  int x;
  int y;
  bar b;
  public function int getbz() const {
    function int foo(int x) {
      println(x);
      return x;
    }
    int x = fts{foo}(5); // error: foo is not pure
    return x;
  }
}

function void t1() {
  foo f = foo(bar(55));
  println(f.getbz());
}

t1();

